--- a/index.html
+++ b/index.html
@@ -50,6 +50,31 @@
             background-color: #007bff;
             color: white;
         }
+
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            .button {
+                width: 100%;
+                padding: 15px;
+                font-size: 16px;
+            }
+            table {
+                font-size: 14px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 1.5em;
+            }
+            .button {
+                padding: 12px;
+                font-size: 14px;
+            }
+            th, td {
+                padding: 8px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -119,7 +144,7 @@
                     <td>Software Testing</td>
                     <td>G-103</td>
                 </tr>
-                <tr></tr>
+                <tr>
                     <td>11:00 – 12:00</td>
                     <td>Project Management & Entrepreneurship</td>
                     <td>G-103</td>
@@ -241,13 +266,8 @@
                 </tr>
                 <tr>
                     <td>12:50 – 01:45</td>
-                    <td>Cloud Computing (L)</td>
-                    <td>G-103</td>
-                </tr>
-                <tr>
-                    <td>01:45 – 02:40</td>
-                    <td>Software Testing (T)</td>
-                    <td>G-104</td>
+                    <td>Cloud Computing (T)</td>
+                    <td>G-106</td>
                 </tr>
             </tbody>
         </table>
@@ -256,20 +276,11 @@
     <script>
         function showTimetable(day) {
             const timetables = document.querySelectorAll('.timetable');
-            timetables.forEach(t => t.style.display = 'none'); // Hide all
-            document.getElementById(day).style.display = 'block'; // Show selected
+            timetables.forEach(timetable => {
+                timetable.style.display = 'none';
+            });
+            document.getElementById(day).style.display = 'block';
         }
-
-        function showCurrentDayTimetable() {
-            const today = new Date();
-            const options = { weekday: 'long' };
-            const day = today.toLocaleDateString('en-US', options).toLowerCase();
-            showTimetable(day);
-        }
-
-        // Call this function when the page loads to show today's timetable
-        window.onload = showCurrentDayTimetable;
     </script>
-
 </body>
 </html>
