--- a/index.html
+++ b/index.html
@@ -7,34 +7,41 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #121212; /* Dark background */
+            color: #e0e0e0; /* Light text */
             margin: 0;
             padding: 20px;
         }
         h1 {
             text-align: center;
+            color: #ffffff; /* White heading */
         }
         .button {
             display: inline-block;
             padding: 10px 20px;
             margin: 5px;
-            background-color: #007bff;
-            color: white;
+            background-color: #1f1f1f; /* Darker button background */
+            color: #ffffff; /* White text */
             border: none;
             border-radius: 5px;
             cursor: pointer;
             text-align: center;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #333333; /* Lighter on hover */
         }
         .timetable {
             display: none;
             margin-top: 20px;
             padding: 20px;
-            background-color: white;
-            border: 1px solid #ccc;
+            background-color: #1e1e1e; /* Darker timetable background */
+            border: 1px solid #444; /* Slightly lighter border */
             border-radius: 5px;
         }
         .timetable h2 {
             margin: 0 0 10px;
+            color: #ffffff; /* White heading in timetable */
         }
         table {
             width: 100%;
@@ -44,11 +51,11 @@
         th, td {
             padding: 10px;
             text-align: left;
-            border: 1px solid #ccc;
+            border: 1px solid #444; /* Darker border */
         }
         th {
-            background-color: #007bff;
-            color: white;
+            background-color: #007bff; /* Blue header background */
+            color: #ffffff; /* White text */
         }
 
         /* Responsive Styles */
@@ -256,18 +263,18 @@
                 </tr>
                 <tr>
                     <td>10:00 – 11:00</td>
-                    <td>Software Testing (L)</td>
+                    <td>Software Testing</td>
                     <td>G-104</td>
                 </tr>
                 <tr>
                     <td>11:00 – 12:00</td>
                     <td>Vision of Human Society (L)</td>
-                    <td>G-103</td>
+                    <td>G-104</td>
                 </tr>
                 <tr>
                     <td>12:50 – 01:45</td>
-                    <td>Cloud Computing (T)</td>
-                    <td>G-106</td>
+                    <td>KHU-702 (Project Management & Entrepreneurship)</td>
+                    <td>Dr. Priyanka Srivastava</td>
                 </tr>
             </tbody>
         </table>
