--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
             background-color: #007bff; /* Blue header background */
             color: #ffffff; /* White text */
         }
+.credits{
+  font-size:0.9rem;
+  padding-top:1rem;
+  text-align: center;
+}
+.credits a{
+  opacity:0.7;
+  text-decoration:none;
+  color:white;
+}
+.credits a:hover{
+  opacity:1;
+}
 
         /* Responsive Styles */
         @media (max-width: 768px) {
@@ -279,6 +292,11 @@
             </tbody>
         </table>
     </div>
+    <div class="credits">
+  Designed by Deependra Singh &nbsp;<i class="fa-sharp fa-regular fa-heart"></i>
+  <hr>
+  <a target="_blank" href="https://www.linkedin.com/in/Deependraxx/"><i class="fa-brands fa-linkedin"></i> Deependra Singh</a>
+</div>
 
     <script>
         function showTimetable(day) {
